2006-12-05 Chris Kelly <ckdake@ckdake.com> 1.6-alpha3-svn-b24

 * Fix: proper svn keywords in files, this will make the up to date
	check in setup not complain when it looks in the manifest file

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b23

 * NEW: !!! CAPTCHA SUPPORT !!!

 Added exprimental captcha support.

 Used hn_captcha classes from Horst Nogajski, horst AT nogajski DOT de

 * New files:
	- includes/captcha/COM430.TTF
	- includes/captcha/captcha_init.php
	- classes/hn_captcha/hn_captcha.x1.example.php
	- classes/hn_captcha/hn_captcha.class.php
	- classes/hn_captcha/hn_captcha.example.php
	- classes/hn_captcha/hn_captcha.class.x1.php

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b22

 * NEW: !!! GROUP SUPPORT !!!

 Added experimental group support for Gallery users.
 You can add, delete and modify Gallery groups.
 Groups from an enviroment are not recognized.

 * New files:
	- lib/groups.php
	- js/selectBoxHandling.js
	- popups/modify_group.php
	- popups/delete_group.php
	- popups/create_group.php
	- popups/manage_groups.php
	- classes/Group.php
	- classes/gallery/Group.php

 * Change: Tweaked drawSelect() and drawSelect()

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b21

 * Fix: Metainfo during upload.

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b20

 Text changes in includes/setup/checks.inc and setup/welcome.inc 

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b19

 * Change: Created lib/tabs.php and moved functions there.
	   Use key of a tab as name.

  Affected:
	    - lib/setup.php !!
	    - includes/setup/defaults.inc
	    - includes/setup/constants.inc
	    - popups/edit_appearance.php 
	    - popups/album_permissions.php (not in this commit)
	    - setup/defaults.inc
	    - setup/constants.inc

2006-12-01 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b18

 * Fix: Missing init of $vaRenderDescriptionCSS in view_album.php

 * Fix: Missng ' in popups/create_user.php and popups/ecard_form.php
