@@ -1,3 +1,9 @@
+2006-12-18 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b25
+
+ * Fix: Typo in lib/Form.php
+
+ * New: Function printInfoBox()
+
 2006-12-05 Chris Kelly <ckdake@ckdake.com> 1.6-alpha3-svn-b24
 
  * Fix: proper svn keywords in files, this will make the up to date
